chore!: prometheus init
